[project]
name = "rippletide-customer-support"
version = "0.1.0"
description = "Customer Support Agent powered by Rippletide and Blaxel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "blaxel[telemetry]==0.2.32",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.27.0",
    "markdown>=3.8.2",
    "python-dotenv>=1.0.0",
    "rich>=13.9.4",
    "svix>=1.68.0",
]
[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
